src/app/App.css
body {
  text-align: center;
}

.App-header {
  background-color: #000;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

body {
    background-color: steelblue;
}

.playground {
    display: flex;
    align-items: flex-start;
    width: 100%;
}

.tests {
    margin: 10px;
    width: 50%;
}

.canvas-side { width: 50%; }

div.canvas {
    margin: 30px;
    height: 90%;
    background-color: white;
    border: inset 4px brown;
    border-radius: 4px;
    box-shadow: rgba(64, 64, 64, 0.5) 12px 8px 40px;
}

canvas {
    width: 100%;
    height: 70vh;
}

.tree.content {
    padding: 6px;
    text-align: left;
    opacity: 100%;
}

.tree.background {
    margin: 4px;
    border: darkblue solid 1px;
    background: white;
    box-shadow: transparent 2px 1px 1px;
    transition: box-shadow .2s;
}

.tree.background.success {
    background: linear-gradient(to bottom right, #6a6, #fff, #fff, #fff);
    box-shadow: rgba(64, 64, 64, 0.5) 2px 1px 1px;
}

.tree.background.failure {
    background: linear-gradient(to bottom right, #f66, #fff);
    box-shadow: rgba(64, 64, 64, 0.5) 4px 2px 2px;
}

.tree.overlay {
    transition: background-color .1s;
    background-color: white;
}

.tree.overlay.success {
    background-color: transparent;
}

.tree.overlay.failure {
    background-color: transparent;
}

